[package]
name = "teawiebot"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/getchoo/teawieBot"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottomify = "1.2.0"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
env_logger = "0.11.3"
eyre = { version = "0.6.12", default-features = false, features = [
	"auto-install",
	"track-caller",
] }
include_dir = "0.7.4"
log = "0.4.22"
poise = "0.6.1"
rand = "0.8.5"
redis = { version = "0.25.4", features = ["tokio-comp", "tokio-rustls-comp"] }
redis-macros = "0.3.0"
reqwest = { version = "0.12.5", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.38.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
url = { version = "2.5.2", features = ["serde"] }
uwurandom-rs = "1.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
