[package]
name = "chill"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/getchoo/chill"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bottomify = "1.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"
rand = "0.8.5"
redis = { version = "0.25.4", features = ["tokio-comp", "tokio-rustls-comp"] }
redis-macros = "0.3.0"
reqwest = { version = "0.12.9", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
url = { version = "2.5.2", features = ["serde"] }
uwurandom-rs = "1.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
