[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "teawie_bot"
version = "0.0.1"
description = "teaiwe"
authors = [
	{ name="seth", email="getchoo@tuta.io" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"discord.py~=2.0",
	"requests~=2.0",
]

[project.optional-dependencies]
dev = [
	"pre-commit",
	"pylint",
	"toml",
	"yapf",
]

[project.urls]
"Homepage" = "https://github.com/getchoo/teawieBot"
"Bug Tracker" = "https://github.com/getchoo/teawieBot/issues"

[project.scripts]
teawiebot = "teawie_bot:main"

[tool.yapf]
use_tabs = true

[tool.pylint.format]
indent-after-paren = 1
indent-string = "\t"

[tool.pylint."messages control"]
disable = ["missing-function-docstring", "missing-module-docstring"]
